--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,108 @@
 [project]
 name = "cangjie-mcp"
 version = "0.1.0"
-description = "Add your description here"
+description = "MCP server for Cangjie programming language documentation"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "mcp[cli]>=1.25.0",
+    "typer>=0.12.0",
+    "rich>=13.0.0",
+    "llama-index-core>=0.11.0",
+    "llama-index-embeddings-huggingface>=0.3.0",
+    "llama-index-embeddings-openai>=0.2.0",
+    "llama-index-vector-stores-chroma>=0.2.0",
+    "sentence-transformers>=3.0.0",
+    "chromadb>=0.5.0",
+    "pydantic>=2.0.0",
+    "pydantic-settings>=2.0.0",
+    "gitpython>=3.1.0",
+    "httpx>=0.27.0",
 ]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-asyncio>=0.23.0",
+    "ruff>=0.8.0",
+    "mypy>=1.13.0",
+    "pyright>=1.1.390",
+]
+
+[project.scripts]
+cangjie-mcp = "cangjie_mcp.cli:app"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/cangjie_mcp"]
+
+[tool.ruff]
+target-version = "py313"
+line-length = 100
+src = ["src", "tests"]
+
+[tool.ruff.lint]
+select = [
+    "E",      # pycodestyle errors
+    "W",      # pycodestyle warnings
+    "F",      # Pyflakes
+    "I",      # isort
+    "B",      # flake8-bugbear
+    "C4",     # flake8-comprehensions
+    "UP",     # pyupgrade
+    "ARG",    # flake8-unused-arguments
+    "SIM",    # flake8-simplify
+    "PTH",    # flake8-use-pathlib
+    "RUF",    # Ruff-specific rules
+    "ANN",    # flake8-annotations
+]
+ignore = []
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = ["ANN"]
+
+[tool.mypy]
+python_version = "3.13"
+strict = true
+disallow_any_generics = true
+disallow_any_unimported = true
+disallow_any_expr = false
+disallow_any_decorated = false
+warn_return_any = true
+warn_unused_configs = true
+show_error_codes = true
+plugins = ["pydantic.mypy"]
+
+[tool.pydantic-mypy]
+init_forbid_extra = true
+init_typed = true
+warn_required_dynamic_aliases = true
+
+[[tool.mypy.overrides]]
+module = [
+    "chromadb.*",
+    "llama_index.*",
+    "git.*",
+    "sentence_transformers.*",
+    "typer.*",
+    "pydantic_settings.*",
+]
+ignore_missing_imports = true
+disallow_any_unimported = false
+
+[tool.pyright]
+pythonVersion = "3.13"
+typeCheckingMode = "strict"
+reportUnknownMemberType = "warning"
+reportUnknownArgumentType = "warning"
+reportUnknownVariableType = "warning"
+reportMissingTypeStubs = "warning"
+reportUnusedFunction = "none"
+include = ["src", "tests"]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = ["tests"]
