--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,15 @@ dependencies = [
     "pydantic-settings>=2.0.0",
     "gitpython>=3.1.0",
     "httpx>=0.27.0",
+    "llama-index-embeddings-openai-like>=0.2.2",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.0",
+    "pytest-cov>=6.0.0",
+    "python-dotenv>=1.0.0",
     "ruff>=0.8.0",
     "mypy>=1.13.0",
     "pyright>=1.1.390",
@@ -93,6 +96,7 @@ module = [
 ignore_missing_imports = true
 disallow_any_unimported = false
 
+
 [tool.pyright]
 pythonVersion = "3.13"
 typeCheckingMode = "strict"
@@ -103,6 +107,39 @@ reportMissingTypeStubs = "warning"
 reportUnusedFunction = "none"
 include = ["src", "tests"]
 
+[[tool.pyright.executionEnvironments]]
+root = "tests"
+reportMissingParameterType = false
+reportUnknownParameterType = false
+reportUnknownMemberType = false
+reportUnknownArgumentType = false
+reportUnknownVariableType = false
+reportPrivateUsage = false
+
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 testpaths = ["tests"]
+markers = [
+    "unit: Unit tests (fast, no external dependencies)",
+    "integration: Integration tests (may require credentials or external services)",
+    "credentials: Tests that require credentials (skipped without valid credentials)",
+]
+addopts = "-v"
+
+[tool.coverage.run]
+source = ["src/cangjie_mcp"]
+branch = true
+omit = ["*/__main__.py"]
+
+[tool.coverage.report]
+exclude_lines = [
+    "pragma: no cover",
+    "if TYPE_CHECKING:",
+    "if __name__ == .__main__.:",
+    "raise NotImplementedError",
+]
+show_missing = true
+skip_covered = false
+
+[tool.coverage.html]
+directory = "htmlcov"
