--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,7 @@ select = [
 ignore = []
 
 [tool.ruff.lint.per-file-ignores]
-"tests/*" = ["ANN"]
+"tests/*" = ["ANN", "RUF001", "ARG002"]
 
 [tool.mypy]
 python_version = "3.13"
