--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dependencies = [
     "gitpython>=3.1.46",
     "httpx>=0.28.0",
     "llama-index-embeddings-openai-like>=0.2.2",
+    "uvicorn>=0.34.0",
 ]
 
 [project.urls]
@@ -124,6 +125,8 @@ module = [
     "sentence_transformers.*",
     "typer.*",
     "pydantic_settings.*",
+    "uvicorn.*",
+    "starlette.*",
 ]
 ignore_missing_imports = true
 disallow_any_unimported = false
@@ -138,6 +141,7 @@ reportUnknownVariableType = "warning"
 reportMissingTypeStubs = "warning"
 reportUnusedFunction = "none"
 include = ["src", "tests"]
+extraPaths = ["."]
 
 [[tool.pyright.executionEnvironments]]
 root = "tests"
