feat: enhance README with environment requirements, installation instructions, and code quality checks; update GitManager to ensure repository is up-to-date with fetch option

--- a/.github/workflows/release-prebuilt.yml
+++ b/.github/workflows/release-prebuilt.yml
@@ -18,13 +18,13 @@ on:
       embedding_type:
         description: 'Embedding type'
         required: true
-        default: 'local'
+        default: 'openai'
         type: choice
         options:
           - local
           - openai
       embedding_model:
-        description: 'Embedding model name'
+        description: 'Embedding model name (local: paraphrase-multilingual-MiniLM-L12-v2, openai: Qwen/Qwen3-Embedding-8B)'
         required: false
         default: 'Qwen/Qwen3-Embedding-8B'
 
