--- a/.github/workflows/release-prebuilt.yml
+++ b/.github/workflows/release-prebuilt.yml
@@ -15,6 +15,14 @@ on:
         options:
           - zh
           - en
+      embedding_model:
+        description: 'Embedding model name (leave empty for default)'
+        required: false
+        default: ''
+      chunk_size:
+        description: 'Max chunk size in characters (leave empty for default: 6000)'
+        required: false
+        default: ''
 
 env:
   PYTHON_VERSION: "3.13"
@@ -42,11 +50,20 @@ jobs:
 
       - name: Build prebuilt archive
         run: |
-          uv run cangjie-mcp prebuilt build \
-            --version ${{ github.event.inputs.docs_version }} \
-            --lang ${{ github.event.inputs.docs_lang }} \
-            --embedding openai \
-            --data-dir ./data
+          ARGS="--version ${{ github.event.inputs.docs_version }}"
+          ARGS="$ARGS --lang ${{ github.event.inputs.docs_lang }}"
+          ARGS="$ARGS --embedding openai"
+          ARGS="$ARGS --data-dir ./data"
+
+          if [ -n "${{ github.event.inputs.embedding_model }}" ]; then
+            ARGS="$ARGS --embedding-model ${{ github.event.inputs.embedding_model }}"
+          fi
+
+          if [ -n "${{ github.event.inputs.chunk_size }}" ]; then
+            ARGS="$ARGS --chunk-size ${{ github.event.inputs.chunk_size }}"
+          fi
+
+          uv run cangjie-mcp prebuilt build $ARGS
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           OPENAI_BASE_URL: ${{ secrets.OPENAI_BASE_URL }}
@@ -70,8 +87,9 @@ jobs:
 
             - **Docs Version**: ${{ github.event.inputs.docs_version }}
             - **Language**: ${{ github.event.inputs.docs_lang }}
-            - **Embedding Type**: ${{ github.event.inputs.embedding_type }}
+            - **Embedding Type**: openai
             - **Embedding Model**: ${{ github.event.inputs.embedding_model || 'default' }}
+            - **Chunk Size**: ${{ github.event.inputs.chunk_size || '6000 (default)' }}
 
             ### Usage
 
