--- a/.env.example
+++ b/.env.example
@@ -20,31 +20,31 @@ CANGJIE_DATA_DIR=./data
 # Max chunk size in characters (default: 6000)
 CANGJIE_CHUNK_MAX_SIZE=6000
 
-# Prebuilt index download URL (optional)
-# CANGJIE_PREBUILT_URL=
+# Remote server URL (optional, forwards queries to an HTTP server)
+# CANGJIE_SERVER_URL=http://localhost:8765
 
 # ===========================================
 # Embedding Settings
 # ===========================================
 
 # Embedding model type: local or openai
-CANGJIE_EMBEDDING_TYPE=local
+CANGJIE_EMBEDDING_TYPE=openai
 
 # Local HuggingFace model name (used when CANGJIE_EMBEDDING_TYPE=local)
-CANGJIE_LOCAL_MODEL=paraphrase-multilingual-MiniLM-L12-v2
+# CANGJIE_LOCAL_MODEL=paraphrase-multilingual-MiniLM-L12-v2
 
 # ===========================================
 # OpenAI Settings (required when CANGJIE_EMBEDDING_TYPE=openai)
 # ===========================================
 
-# OpenAI API Key
-OPENAI_API_KEY=your-openai-api-key-here
+# OpenAI API Key (SiliconFlow)
+OPENAI_API_KEY=your-siliconflow-api-key-here
 
-# OpenAI API Base URL (for compatible APIs like SiliconFlow)
-OPENAI_BASE_URL=https://api.openai.com/v1
+# OpenAI API Base URL (SiliconFlow)
+OPENAI_BASE_URL=https://api.siliconflow.cn/v1
 
 # OpenAI embedding model
-OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+OPENAI_EMBEDDING_MODEL=BAAI/bge-m3
 
 # ===========================================
 # Rerank Settings (optional)
@@ -63,14 +63,11 @@ CANGJIE_RERANK_TOP_K=5
 CANGJIE_RERANK_INITIAL_K=20
 
 # ===========================================
-# HTTP Server Settings (for `cangjie-mcp serve`)
+# HTTP Server Settings (for `cangjie-mcp server`)
 # ===========================================
 
 # HTTP server host address (default: 127.0.0.1)
-CANGJIE_HTTP_HOST=127.0.0.1
+CANGJIE_SERVER_HOST=127.0.0.1
 
-# HTTP server port (default: 8000)
-CANGJIE_HTTP_PORT=8000
-
-# Comma-separated list of URLs to prebuilt index archives
-# CANGJIE_INDEXES=https://example.com/index1.tar.gz,https://example.com/index2.tar.gz
+# HTTP server port (default: 8765)
+CANGJIE_SERVER_PORT=8765
