--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
     "gitpython>=3.1.46",
     "httpx>=0.28.0",
     "llama-index-embeddings-openai-like>=0.2.2",
+    "sansio-lsp-client>=0.13.0",
 ]
 
 [project.urls]
