--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: uv python install ${{ env.PYTHON_VERSION }}
 
       - name: Install dependencies
-        run: uv sync --dev
+        run: uv sync --dev --extra local
 
       - name: Run ruff check
         run: uv run ruff check src tests
@@ -54,9 +54,6 @@ jobs:
       - name: Install dependencies
         run: uv sync --dev --extra local
 
-      - name: Run mypy
-        run: uv run mypy src
-
       - name: Run pyright
         run: uv run pyright src
 
@@ -78,7 +75,7 @@ jobs:
         run: uv python install ${{ env.PYTHON_VERSION }}
 
       - name: Install dependencies
-        run: uv sync --dev
+        run: uv sync --dev --extra local
 
       - name: Run unit tests
         run: |
