--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ dependencies = [
     "httpx>=0.28.0",
     "llama-index-embeddings-openai-like>=0.2.2",
     "sansio-lsp-client>=0.13.0",
+    "bm25s>=0.2.0",
+    "jieba>=0.42.1",
 ]
 
 [project.optional-dependencies]
@@ -64,7 +66,6 @@ dev = [
     "pytest-cov>=7.0.0",
     "python-dotenv>=1.2.0",
     "ruff>=0.14.0",
-    "mypy>=1.19.0",
     "pyright>=1.1.400",
     "pre-commit>=4.0.0",
 ]
@@ -103,38 +104,6 @@ ignore = []
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["ANN", "RUF001", "ARG002"]
-
-[tool.mypy]
-python_version = "3.13"
-strict = true
-disallow_any_generics = true
-disallow_any_unimported = true
-disallow_any_expr = false
-disallow_any_decorated = false
-warn_return_any = true
-warn_unused_configs = true
-show_error_codes = true
-plugins = ["pydantic.mypy"]
-
-[tool.pydantic-mypy]
-init_forbid_extra = true
-init_typed = true
-warn_required_dynamic_aliases = true
-
-[[tool.mypy.overrides]]
-module = [
-    "chromadb.*",
-    "llama_index.*",
-    "git.*",
-    "sentence_transformers.*",
-    "typer.*",
-    "pydantic_settings.*",
-    "uvicorn.*",
-    "starlette.*",
-]
-ignore_missing_imports = true
-disallow_any_unimported = false
-
 
 [tool.pyright]
 pythonVersion = "3.13"
