--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,76 +1,11 @@
-[package]
-name = "cangjie-mcp"
-version = "0.3.0"
-edition = "2021"
-description = "MCP server for Cangjie programming language documentation"
-license = "MIT"
-default-run = "cangjie-mcp"
-
-[[bin]]
-name = "cangjie-mcp"
-path = "src/main.rs"
-
-[features]
-default = []
-local = ["dep:fastembed"]
-
-[dependencies]
-# MCP protocol
-rmcp = { version = "0.16", features = ["server", "transport-io", "macros", "schemars"] }
-
-# CLI
-clap = { version = "4", features = ["derive", "env"] }
-
-# Async runtime
-tokio = { version = "1", features = ["full"] }
-
-# Serialization
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-
-# HTTP client + server
-reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
-axum = "0.8"
-tower-http = { version = "0.6", features = ["cors"] }
-
-# BM25 search
-tantivy = "0.22"
-
-# Chinese tokenization
-jieba-rs = "0.7"
-
-# Git operations
-git2 = "0.20"
-
-# Logging
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
-tracing-appender = "0.2"
-
-# Utilities
-regex = "1"
-dirs = "6"
-anyhow = "1"
-thiserror = "1"
-once_cell = "1"
-strsim = "0.11"
-futures = "0.3"
-
-# Markdown-aware chunking
-text-splitter = { version = "0.19", features = ["markdown"] }
-
-# Vector database
-lancedb = "0.16"
-arrow-array = "53"
-arrow-schema = "53"
-
-# LSP support
-toml = "0.8"
-tokio-lsp = "0.1"
-lsp-types = "0.97"
-
-# Local embedding/reranking (optional)
-fastembed = { version = "4", optional = true }
+[workspace]
+members = [
+    "cangjie-mcp",
+    "cangjie-mcp-cli",
+    "cangjie-mcp-server",
+    "cangjie-mcp-test",
+]
+resolver = "2"
 
 [profile.release]
 lto = true
