--- a/cangjie-mcp/Cargo.toml
+++ b/cangjie-mcp/Cargo.toml
@@ -24,15 +24,15 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 # HTTP client + server
-reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
+reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "blocking"] }
 axum = "0.8"
 tower-http = { version = "0.6", features = ["cors"] }
 
 # BM25 search
-tantivy = "0.22"
+tantivy = "0.25"
 
 # Chinese tokenization
-jieba-rs = "0.7"
+jieba-rs = "0.8"
 
 # Git operations
 git2 = "0.20"
@@ -46,26 +46,26 @@ tracing-appender = "0.2"
 regex = "1"
 dirs = "6"
 anyhow = "1"
-thiserror = "1"
+thiserror = "2"
 once_cell = "1"
 strsim = "0.11"
 futures = "0.3"
 
 # Markdown-aware chunking
-text-splitter = { version = "0.19", features = ["markdown"] }
+text-splitter = { version = "0.29", features = ["markdown"] }
 
 # Vector database
-lancedb = "0.16"
-arrow-array = "53"
-arrow-schema = "53"
+lancedb = "0.26"
+arrow-array = "57"
+arrow-schema = "57"
 
 # LSP support
-toml = "0.8"
+toml = "1.0"
 tokio-lsp = "0.1"
 lsp-types = "0.97"
 
 # Local embedding/reranking (optional)
-fastembed = { version = "4", optional = true }
+fastembed = { version = "5", optional = true }
 
 [dev-dependencies]
 tempfile = "3"
