refactor: introduce prebuilt index handling

--- a/.env.example
+++ b/.env.example
@@ -50,8 +50,9 @@ OPENAI_EMBEDDING_MODEL=BAAI/bge-m3
 # Rerank Settings (optional)
 # ===========================================
 
-# Rerank type: none, local, or openai (default: none)
-CANGJIE_RERANK_TYPE=none
+# Rerank type: none, local, or openai
+# For Docker: must be "openai" to match the pre-built index
+CANGJIE_RERANK_TYPE=openai
 
 # Rerank model name
 CANGJIE_RERANK_MODEL=BAAI/bge-reranker-v2-m3
