refactor: enhance async support across indexer and embedding modules, update dependencies, and improve Dockerfile for build-time model recording

--- a/cangjie-mcp/Cargo.toml
+++ b/cangjie-mcp/Cargo.toml
@@ -24,7 +24,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 # HTTP client + server
-reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "blocking"] }
+reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
 axum = "0.8"
 tower-http = { version = "0.6", features = ["cors"] }
 
@@ -41,6 +41,9 @@ git2 = "0.20"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 tracing-appender = "0.2"
+
+# Async trait support
+async-trait = "0.1"
 
 # Utilities
 regex = "1"
