--- a/cangjie-mcp-test/Cargo.toml
+++ b/cangjie-mcp-test/Cargo.toml
@@ -13,3 +13,5 @@ axum = "0.8"
 tower = { version = "0.5", features = ["util"] }
 http-body-util = "0.1"
 anyhow = "1"
+async-trait = "0.1"
+rmcp = { version = "0.16", features = ["server", "macros", "schemars"] }
