--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,180 @@ permissions:
   id-token: write
 
 jobs:
+  linux:
+    name: Build Linux wheels
+    runs-on: ${{ matrix.platform.runner }}
+    strategy:
+      matrix:
+        platform:
+          - runner: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            artifact_suffix: x86_64
+            manylinux: "2_17"
+          - runner: ubuntu-24.04-arm
+            target: aarch64-unknown-linux-gnu
+            artifact_suffix: aarch64
+            manylinux: "2_17"
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+
+      - name: Build wheel
+        uses: PyO3/maturin-action@b1bd829e37fef14c63f19162034228a2f3dc1021 # v1.50.0
+        with:
+          target: ${{ matrix.platform.target }}
+          manylinux: ${{ matrix.platform.manylinux }}
+          args: --release --out dist
+          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+          before-script-linux: |
+            ARCH="$(uname -m)"
+            if [ "$ARCH" = "x86_64" ]; then
+              PROTOC_ARCH="x86_64"
+            elif [ "$ARCH" = "aarch64" ]; then
+              PROTOC_ARCH="aarch_64"
+            else
+              echo "Unsupported architecture for protoc: $ARCH"
+              exit 1
+            fi
+            PROTOC_ZIP="protoc-33.5-linux-${PROTOC_ARCH}.zip"
+            curl -LO "https://github.com/protocolbuffers/protobuf/releases/download/v33.5/${PROTOC_ZIP}"
+            python3 -m zipfile -e "${PROTOC_ZIP}" /usr/local
+            rm "${PROTOC_ZIP}"
+            chmod +x /usr/local/bin/protoc
+            protoc --version
+
+      - name: Test wheel
+        run: |
+          pip install cangjie_mcp --find-links dist --force-reinstall
+          cangjie-mcp --help
+          python -m cangjie_mcp --help
+
+      - name: Upload wheel
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
+        with:
+          name: wheels-linux-${{ matrix.platform.artifact_suffix }}
+          path: dist
+
+  musllinux:
+    name: Build musllinux wheels
+    runs-on: ${{ matrix.platform.runner }}
+    strategy:
+      matrix:
+        platform:
+          - runner: ubuntu-latest
+            target: x86_64-unknown-linux-musl
+            artifact_suffix: x86_64
+          - runner: ubuntu-24.04-arm
+            target: aarch64-unknown-linux-musl
+            artifact_suffix: aarch64
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+
+      - name: Build wheel
+        uses: PyO3/maturin-action@b1bd829e37fef14c63f19162034228a2f3dc1021 # v1.50.0
+        with:
+          target: ${{ matrix.platform.target }}
+          manylinux: musllinux_1_2
+          args: --release --out dist
+          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+          before-script-linux: |
+            ARCH="$(uname -m)"
+            if [ "$ARCH" = "x86_64" ]; then
+              PROTOC_ARCH="x86_64"
+            elif [ "$ARCH" = "aarch64" ]; then
+              PROTOC_ARCH="aarch_64"
+            else
+              echo "Unsupported architecture for protoc: $ARCH"
+              exit 1
+            fi
+            PROTOC_ZIP="protoc-33.5-linux-${PROTOC_ARCH}.zip"
+            curl -LO "https://github.com/protocolbuffers/protobuf/releases/download/v33.5/${PROTOC_ZIP}"
+            python3 -m zipfile -e "${PROTOC_ZIP}" /usr/local
+            rm "${PROTOC_ZIP}"
+            chmod +x /usr/local/bin/protoc
+            protoc --version
+
+      - name: Upload wheel
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
+        with:
+          name: wheels-musllinux-${{ matrix.platform.artifact_suffix }}
+          path: dist
+
+  windows:
+    name: Build Windows wheels
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        platform:
+          - target: x86_64-pc-windows-msvc
+            artifact_suffix: x86_64
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+
+      - name: Install Protoc
+        uses: arduino/setup-protoc@c65c819552d16ad3c9b72d9dfd5ba5237b9c906b # v3.0.0
+        with:
+          version: "33.5"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build wheel
+        uses: PyO3/maturin-action@b1bd829e37fef14c63f19162034228a2f3dc1021 # v1.50.0
+        with:
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist
+          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+
+      - name: Test wheel
+        run: |
+          pip install cangjie_mcp --find-links dist --force-reinstall
+          cangjie-mcp --help
+          python -m cangjie_mcp --help
+
+      - name: Upload wheel
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
+        with:
+          name: wheels-windows-${{ matrix.platform.artifact_suffix }}
+          path: dist
+
+  macos:
+    name: Build macOS wheels
+    runs-on: ${{ matrix.platform.runner }}
+    strategy:
+      matrix:
+        platform:
+          - runner: macos-15-intel
+            target: x86_64-apple-darwin
+            artifact_suffix: x86_64
+          - runner: macos-15
+            target: aarch64-apple-darwin
+            artifact_suffix: aarch64
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+
+      - name: Install Protoc
+        uses: arduino/setup-protoc@c65c819552d16ad3c9b72d9dfd5ba5237b9c906b # v3.0.0
+        with:
+          version: "33.5"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build wheel
+        uses: PyO3/maturin-action@b1bd829e37fef14c63f19162034228a2f3dc1021 # v1.50.0
+        with:
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist
+          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
+
+      - name: Test wheel
+        run: |
+          pip install cangjie_mcp --find-links dist --force-reinstall
+          cangjie-mcp --help
+          python -m cangjie_mcp --help
+
+      - name: Upload wheel
+        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
+        with:
+          name: wheels-macos-${{ matrix.platform.artifact_suffix }}
+          path: dist
+
   sdist:
     name: Build sdist
     runs-on: ubuntu-latest
@@ -34,256 +208,15 @@ jobs:
           name: wheels-sdist
           path: dist
 
-  macos-x86_64:
-    name: Build macOS x86_64
-    runs-on: macos-15-intel
-    steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-
-      - name: Install Protoc
-        uses: arduino/setup-protoc@c65c819552d16ad3c9b72d9dfd5ba5237b9c906b # v3.0.0
-        with:
-          version: "33.5"
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build wheel
-        uses: PyO3/maturin-action@b1bd829e37fef14c63f19162034228a2f3dc1021 # v1.50.0
-        with:
-          target: x86_64-apple-darwin
-          args: --release --out dist
-          sccache: "true"
-
-      - name: Upload wheel
-        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
-        with:
-          name: wheels-macos-x86_64
-          path: dist
-
-  macos-aarch64:
-    name: Build macOS aarch64
-    runs-on: macos-15
-    steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-
-      - name: Install Protoc
-        uses: arduino/setup-protoc@c65c819552d16ad3c9b72d9dfd5ba5237b9c906b # v3.0.0
-        with:
-          version: "33.5"
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build wheel
-        uses: PyO3/maturin-action@b1bd829e37fef14c63f19162034228a2f3dc1021 # v1.50.0
-        with:
-          target: aarch64-apple-darwin
-          args: --release --out dist
-          sccache: "true"
-
-      - name: Test wheel
-        run: |
-          pip install cangjie_mcp --find-links dist --force-reinstall
-          cangjie-mcp --help
-          python -m cangjie_mcp --help
-
-      - name: Upload wheel
-        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
-        with:
-          name: wheels-macos-aarch64
-          path: dist
-
-  windows-x86_64:
-    name: Build Windows x86_64
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-
-      - name: Install Protoc
-        uses: arduino/setup-protoc@c65c819552d16ad3c9b72d9dfd5ba5237b9c906b # v3.0.0
-        with:
-          version: "33.5"
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build wheel
-        uses: PyO3/maturin-action@b1bd829e37fef14c63f19162034228a2f3dc1021 # v1.50.0
-        with:
-          target: x86_64-pc-windows-msvc
-          args: --release --out dist
-          sccache: "true"
-
-      - name: Test wheel
-        run: |
-          pip install cangjie_mcp --find-links dist --force-reinstall
-          cangjie-mcp --help
-          python -m cangjie_mcp --help
-
-      - name: Upload wheel
-        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
-        with:
-          name: wheels-windows-x86_64
-          path: dist
-
-  linux-x86_64:
-    name: Build Linux x86_64
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-
-      - name: Build wheel
-        uses: PyO3/maturin-action@b1bd829e37fef14c63f19162034228a2f3dc1021 # v1.50.0
-        with:
-          target: x86_64-unknown-linux-gnu
-          manylinux: "2_17"
-          args: --release --out dist
-          sccache: "true"
-          before-script-linux: |
-            ARCH="$(uname -m)"
-            if [ "$ARCH" = "x86_64" ]; then
-              PROTOC_ARCH="x86_64"
-            elif [ "$ARCH" = "aarch64" ]; then
-              PROTOC_ARCH="aarch_64"
-            else
-              echo "Unsupported architecture for protoc: $ARCH"
-              exit 1
-            fi
-            PROTOC_ZIP="protoc-33.5-linux-${PROTOC_ARCH}.zip"
-            curl -LO "https://github.com/protocolbuffers/protobuf/releases/download/v33.5/${PROTOC_ZIP}"
-            python3 -m zipfile -e "${PROTOC_ZIP}" /usr/local
-            rm "${PROTOC_ZIP}"
-            chmod +x /usr/local/bin/protoc
-            protoc --version
-
-      - name: Test wheel
-        run: |
-          pip install cangjie_mcp --find-links dist --force-reinstall
-          cangjie-mcp --help
-          python -m cangjie_mcp --help
-
-      - name: Upload wheel
-        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
-        with:
-          name: wheels-linux-x86_64
-          path: dist
-
-  linux-aarch64:
-    name: Build Linux aarch64
-    runs-on: ubuntu-24.04-arm
-    steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-
-      - name: Build wheel
-        uses: PyO3/maturin-action@b1bd829e37fef14c63f19162034228a2f3dc1021 # v1.50.0
-        with:
-          target: aarch64-unknown-linux-gnu
-          manylinux: "2_17"
-          args: --release --out dist
-          sccache: "true"
-          before-script-linux: |
-            ARCH="$(uname -m)"
-            if [ "$ARCH" = "x86_64" ]; then
-              PROTOC_ARCH="x86_64"
-            elif [ "$ARCH" = "aarch64" ]; then
-              PROTOC_ARCH="aarch_64"
-            else
-              echo "Unsupported architecture for protoc: $ARCH"
-              exit 1
-            fi
-            PROTOC_ZIP="protoc-33.5-linux-${PROTOC_ARCH}.zip"
-            curl -LO "https://github.com/protocolbuffers/protobuf/releases/download/v33.5/${PROTOC_ZIP}"
-            python3 -m zipfile -e "${PROTOC_ZIP}" /usr/local
-            rm "${PROTOC_ZIP}"
-            chmod +x /usr/local/bin/protoc
-            protoc --version
-
-      - name: Upload wheel
-        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
-        with:
-          name: wheels-linux-aarch64
-          path: dist
-
-  musllinux-x86_64:
-    name: Build musllinux x86_64
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-
-      - name: Build wheel
-        uses: PyO3/maturin-action@b1bd829e37fef14c63f19162034228a2f3dc1021 # v1.50.0
-        with:
-          target: x86_64-unknown-linux-musl
-          manylinux: musllinux_1_2
-          args: --release --out dist
-          sccache: "true"
-          before-script-linux: |
-            ARCH="$(uname -m)"
-            if [ "$ARCH" = "x86_64" ]; then
-              PROTOC_ARCH="x86_64"
-            elif [ "$ARCH" = "aarch64" ]; then
-              PROTOC_ARCH="aarch_64"
-            else
-              echo "Unsupported architecture for protoc: $ARCH"
-              exit 1
-            fi
-            PROTOC_ZIP="protoc-33.5-linux-${PROTOC_ARCH}.zip"
-            curl -LO "https://github.com/protocolbuffers/protobuf/releases/download/v33.5/${PROTOC_ZIP}"
-            python3 -m zipfile -e "${PROTOC_ZIP}" /usr/local
-            rm "${PROTOC_ZIP}"
-            chmod +x /usr/local/bin/protoc
-            protoc --version
-
-      - name: Upload wheel
-        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
-        with:
-          name: wheels-musllinux-x86_64
-          path: dist
-
-  musllinux-aarch64:
-    name: Build musllinux aarch64
-    runs-on: ubuntu-24.04-arm
-    steps:
-      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
-
-      - name: Build wheel
-        uses: PyO3/maturin-action@b1bd829e37fef14c63f19162034228a2f3dc1021 # v1.50.0
-        with:
-          target: aarch64-unknown-linux-musl
-          manylinux: musllinux_1_2
-          args: --release --out dist
-          sccache: "true"
-          before-script-linux: |
-            ARCH="$(uname -m)"
-            if [ "$ARCH" = "x86_64" ]; then
-              PROTOC_ARCH="x86_64"
-            elif [ "$ARCH" = "aarch64" ]; then
-              PROTOC_ARCH="aarch_64"
-            else
-              echo "Unsupported architecture for protoc: $ARCH"
-              exit 1
-            fi
-            PROTOC_ZIP="protoc-33.5-linux-${PROTOC_ARCH}.zip"
-            curl -LO "https://github.com/protocolbuffers/protobuf/releases/download/v33.5/${PROTOC_ZIP}"
-            python3 -m zipfile -e "${PROTOC_ZIP}" /usr/local
-            rm "${PROTOC_ZIP}"
-            chmod +x /usr/local/bin/protoc
-            protoc --version
-
-      - name: Upload wheel
-        uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
-        with:
-          name: wheels-musllinux-aarch64
-          path: dist
-
   publish:
     name: Publish to PyPI
     if: github.event_name == 'release'
     runs-on: ubuntu-latest
-    needs:
-      - sdist
-      - macos-x86_64
-      - macos-aarch64
-      - windows-x86_64
-      - linux-x86_64
-      - linux-aarch64
-      - musllinux-x86_64
-      - musllinux-aarch64
+    needs: [linux, musllinux, windows, macos, sdist]
+    permissions:
+      contents: write
+      id-token: write
+      attestations: write
     steps:
       - name: Download all wheels
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
@@ -291,6 +224,11 @@ jobs:
           pattern: wheels-*
           merge-multiple: true
           path: dist
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@96278af6caaf10aea03fd8d33a09a777ca52d62f # v3.2.0
+        with:
+          subject-path: "dist/*"
 
       - name: List dist contents
         run: ls -la dist/
