--- a/cangjie-mcp-cli/Cargo.toml
+++ b/cangjie-mcp-cli/Cargo.toml
@@ -12,11 +12,16 @@ path = "src/main.rs"
 [features]
 default = []
 local = ["cangjie-mcp/local"]
+local-cuda = ["cangjie-mcp/local-cuda"]
+local-cudnn = ["cangjie-mcp/local-cudnn"]
+local-metal = ["cangjie-mcp/local-metal"]
+local-mkl = ["cangjie-mcp/local-mkl"]
+local-accelerate = ["cangjie-mcp/local-accelerate"]
 
 [dependencies]
 cangjie-mcp = { path = "../cangjie-mcp" }
 clap = { version = "4", features = ["derive", "env"] }
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 rmcp = { version = "0.16", features = ["server", "transport-io"] }
 anyhow = "1"
 tracing = "0.1"
