--- a/cangjie-mcp/Cargo.toml
+++ b/cangjie-mcp/Cargo.toml
@@ -9,9 +9,6 @@ license = "MIT"
 default = []
 local = [
     "dep:fastembed",
-    "fastembed/hf-hub-rustls-tls",
-    "fastembed/ort-download-binaries-rustls-tls",
-    "fastembed/image-models",
 ]
 local-cuda = ["local", "fastembed/cuda"]
 local-cudnn = ["local", "fastembed/cudnn"]
@@ -83,7 +80,7 @@ tokio-lsp = "0.1"
 lsp-types = "0.97"
 
 # Local embedding/reranking (optional)
-fastembed = { version = "5", optional = true, default-features = false }
+fastembed = { version = "5", optional = true, default-features = false, features = ["hf-hub-rustls-tls", "image-models", "ort-download-binaries-rustls-tls"] }
 
 [dev-dependencies]
 tempfile = "3"
